Fix submenu item alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -484,11 +484,11 @@ ul.primary-tabs.links {
         }
       }
     }
-  }
-
-  .tb-megamenu-submenu {
-    li a {
-      text-align: left;
+  
+  &>.tb-megamenu-submenu {
+      li a {
+        text-align: left;
+      }
     }
   }
 }
